Created a CSS Page
Created a CSS Page and added a background image to it.

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <link rel="stylesheet" type="text/css" href="mainPage.css">
     <h1> I'm hosted w/ GitHub Pages!</h1>
 </head>
 <body>
