--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Dennis Wong</title>
     <link rel="stylesheet" type="text/css" href="mainPage.css">
     <h1> I'm hosted w/ GitHub Pages!</h1>
 </head>
