--- a/index.html
+++ b/index.html
@@ -4,9 +4,20 @@
     <meta charset="UTF-8">
     <title>Dennis Wong</title>
     <link rel="stylesheet" type="text/css" href="mainPage.css">
-    <h1> I'm hosted w/ GitHub Pages!</h1>
+    <link rel="stylesheet" type="text/css" href="bootstrap.css">
+    <link href="https://fonts.googleapis.com/css?family=Quicksand" rel="stylesheet">
 </head>
+<style>
+    @import url('https://fonts.googleapis.com/css?family=Quicksand');
+</style>
 <body>
-
+    <div class="col-md-8 center-block" id="title">
+        <img id="profilePic" src="profilePic.jpg">
+        <p id="titleDesc">
+            <h1>Dennis Wong - Programmer, Gamer, Lifelong Student</h1>
+            <h1>-------------------------------------------------</h1>
+            <h2>An Aspiring Programmer Looking to Make A Difference</h2>
+        </p>
+    </div>
 </body>
 </html>
