Removed Silhouette; added links
Got rid of that silhouette idea; going to use text for a cleaner
appearance.

--- a/index.html
+++ b/index.html
@@ -20,7 +20,12 @@
         </p>
     </div>
     <div class="col-md-8 center-block" id="tabs">
-        <img src="silhouette.jpeg" class="tabImg" id="abtImg">
+        <ul>
+            <li><a href="#">About Me</a></li>
+            <li><a href="#">Projects</a></li>
+            <li><a href="#">Contact Me</a></li>
+        </ul>
+
     </div>
 </body>
 </html>
