About Me Tab has skills in it
Added some skills to the About Me Tab

--- a/index.html
+++ b/index.html
@@ -25,14 +25,33 @@
             <li><a href="#" ng-click="tabs.setTab(2)">Projects</a></li>
             <li><a href="#" ng-click="tabs.setTab(3)">Contact Me</a></li>
         </ul>
-        <div class="panel" ng-show="tabs.isSet(1)">
-            fdjsklfsdajlfsd
+        <div class="panel" ng-show="tabs.isSet(1)" id="skillsList">
+            <div class="row">
+                <div class="col-xs-6">
+                    <b>Front End Technologies</b>
+                    <ul>
+                        <li>Javascript, Angular JS</li>
+                        <li>HTML/CSS</li>
+                        <li>Twitter Bootstrap</li>
+                    </ul>
+                </div>
+                <div class="col-xs-6">
+                    <b>Back End Technologies</b>
+                    <ul>
+                        <li>Java</li>
+                        <li>Python</li>
+                        <li>C/C++</li>
+                    </ul>
+                </div>
+            </div>
+
+
         </div>
         <div class="panel" ng-show="tabs.isSet(2)">
-            jkl;jhioljkl;
+            not done yet
         </div>
         <div class="panel" ng-show="tabs.isSet(3)">
-            eryiowqpruewo32904723
+            also not done yet
         </div>
 
     </div>
