removed the # from the hrefs

--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
     </div>
     <div ng-controller="TabController as tabs" class="col-md-8 center-block" id="tabs">
         <ul>
-            <li><a href="#" ng-click="tabs.setTab(1)">About Me</a></li>
-            <li><a href="#" ng-click="tabs.setTab(2)">Projects</a></li>
-            <li><a href="#" ng-click="tabs.setTab(3)">Contact Me</a></li>
+            <li><a href="" ng-click="tabs.setTab(1)">About Me</a></li>
+            <li><a href="" ng-click="tabs.setTab(2)">Projects</a></li>
+            <li><a href="" ng-click="tabs.setTab(3)">Contact Me</a></li>
         </ul>
         <div class="panel" ng-show="tabs.isSet(1)" id="skillsList">
             <div class="row">
